prevent code from overflowing, scrolling instead

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -73,6 +73,10 @@ section {
   border: none;
 }
 
+pre {
+  overflow-x: scroll;
+}
+
 aside {
   top: calc(var(--menu-height) + 3 * var(--float-margins));
   position: fixed;
